Mostly fix the animation flicker in Chrome

--- a/www/css/clock/flipclock.less
+++ b/www/css/clock/flipclock.less
@@ -67,6 +67,7 @@
         text-align: center;
         font-family: 'sahararegular';
         text-indent: 10px;
+        line-height: 280px;
 
         &.time_right, &.ampm {
             line-height: 100px;
@@ -88,6 +89,7 @@
     font-family: 'franchiseregular';
     font-size: 320px;
     text-align: center;
+    line-height: 305px;
 
     // font
     &.time_right {
@@ -218,7 +220,7 @@
             width: 100%;
             height: 100%;
 
-            .backface-visibility(hidden);
+            //.backface-visibility(hidden);
 
             div {
                 -webkit-transform: translate3d(0,0,0);
@@ -226,7 +228,7 @@
             }
         }
         .back {
-            .transform-flip(180deg);
+            .transform-flip(181deg);
             /* opacity: 0; */
         }
     }
